[Bug 669682] The media search button wraps in German
See: https://bugzilla.mozilla.org/show_bug.cgi?id=669682

--- a/media/less/includes/editor-tools.less
+++ b/media/less/includes/editor-tools.less
@@ -231,13 +231,6 @@ section.marky {
     display: block;
     padding: 7px 15px;
 
-    input[type="text"] {
-      background: url("../img/icon.searchloupe.png") no-repeat scroll 7px center #FFFFFF;
-      margin: 0 7px 0 0;
-      padding-left: 33px;
-      width: 500px;
-    }
-
     div.type {
       color: #929292;
       float: right;
@@ -282,6 +275,18 @@ section.marky {
     bottom: 15px;
     left: 15px;
     position: absolute;
+  }
+
+  .submit-button {
+    right: 0;
+  }
+
+  .searchbox {
+    width: 630px;
+  }
+
+  .kbox-wrap {
+    padding: 10px 25px
   }
 }
 
@@ -334,11 +339,6 @@ section.marky {
     div.placeholder {
       left: auto;
       right: 15px;
-    }
-
-    div.filter input[type="text"] {
-      padding-left: 5px;
-      padding-right: 33px;
     }
 
     div.type {
